fix(search): dialog backdrop margin issue * on iphone safe-area inset causes white bar at bottom * changed mat-dialog to mat-menu

--- a/apps/client/src/styles/styles.scss
+++ b/apps/client/src/styles/styles.scss
@@ -55,6 +55,10 @@ body {
   font-family: var(--rs-font-family);
 }
 
+.search-menu.mat-mdc-menu-panel {
+  max-width: 700px;
+}
+
 h2 {
   line-height: 40px;
   letter-spacing: 2px;
